# hallm

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  OPENCLAUDE.md  README.md  cerberus-ca.pem  docker-compose.yml  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude/commands/: qa.md
.claude/hooks/: qa.sh
.claude/rules/: pre-commit.md
.github/: copilot-instructions.md
.github/instructions/: qa.instructions.md
.github/prompts/: qa.prompt.md
.github/skills/qa/: SKILL.md
docker/: Dockerfile  Dockerfile.activitywatch  Dockerfile.test
hallm/cli/: __main__.py  main.py
hallm/cli/base/: __init__.py  docker.py  kubectl.py  poll.py  shell.py  template.py
hallm/cli/subcommands/: container.py  db.py  k3d.py  k8s.py  litellm.py  mcp.py
hallm/cli/subcommands/bootstrap/: init.hallm.sql
hallm/core/: __init__.py  _http.py  cache.py  enums.py  gotify.py  observability.py  paperless.py  settings.py  storage.py
hallm/db/: __init__.py  models.py
hallm/db/base/: fields.py  mixins.py
hallm/db/migrations/: 0001_initial.py
hallm/litellm/: __init__.py  client.py  models.py
hallm/mcp/: server.py
k3d/: activitywatch.yaml  cerberus.yaml  habitica.yaml  litellm.yaml  ollama.yaml  openclaw.yaml  ots.yaml  paperless.yaml  postgres.yaml  rustfs.yaml  signoz-ingress.yaml  signoz-values.yaml  unregistry.yaml  your-spotify.yaml
k3d/jobs/: db-bootstrap.yaml
k3d/test/: gpu-smoke.yaml
k8s/: activitywatch.yaml  glitchtip.yaml  gotify.yaml  heimdall.yaml  mongo.yaml  ollama.yaml  ots.yaml  portainer.yaml  registries.yaml  rustfs.yaml  unregistry.yaml  valkey.yaml
k8s/helm/: signoz-values.yaml
k8s/test/: dns-smoke.yaml
litellm/: config.yaml
scripts/: install-rootless-docker.sh
src/hallm/: __init__.py
src/hallm/cli/: __init__.py
src/hallm/core/: settings.py
src/hallm/db/: models.py
src/hallm/db/base/: fields.py
src/hallm/db/migrations/: __init__.py
src/hallm/litellm/: client.py  models.py
src/hallm/mcp/: __init__.py  server.py
tests/: conftest.py
tests/hallm/cli/: test_container.py  test_db.py  test_k3d.py  test_k8s.py  test_k8s_internals.py  test_main.py  test_mcp.py
tests/hallm/cli/base/: test_docker.py  test_kubectl.py  test_poll.py  test_shell.py  test_template.py
tests/hallm/core/: __init__.py  test_cache.py  test_enums.py  test_gotify.py  test_http.py  test_observability.py  test_paperless.py  test_settings.py  test_storage.py
tests/hallm/db/: test_init.py  test_models.py
tests/hallm/db/base/: test_fields.py  test_mixins.py
tests/hallm/litellm/: test_client.py
tests/hallm/mcp/: test_server.py
