[project]
name = "hallm"
version = "0.1.0"
description = "LLM-powered assistant with MCP server and CLI"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.30",
    "environs>=14.0",
    "fastmcp>=2.0",
    "ipdb>=0.13",
    "slugify>=0.0.1",
    "tortoise-orm[asyncpg]>=0.22",
    "typer>=0.25.1",
]

[project.scripts]
hallm = "hallm.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hallm"]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "pre-commit>=4.6.0",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "ruff>=0.11",
    "ty>=0.0.1a8",
]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
src = ["."]
line-length = 100
target-version = "py314"
exclude = ["hallm/db/migrations"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "RUF", # ruff-specific
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["hallm"]
force-single-line = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Ty
# ---------------------------------------------------------------------------
[tool.ty.src]
include = ["."]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--tb=short -q"
markers = [
    "integration: marks tests as integration tests that call real APIs (deselect with '-m not integration')",
]

[tool.coverage.run]
source = ["hallm"]
omit = ["*/tests/*"]

# ---------------------------------------------------------------------------
# Tortoise ORM / migrations
# ---------------------------------------------------------------------------
[tool.tortoise]
tortoise_orm = "hallm.db.TORTOISE_ORM"
